syntax = "proto3";

package v13s.api.protobuf;

option go_package = "./pkg/api/vulnerabilities/management";

service Management{
  rpc RegisterWorkload(RegisterWorkloadRequest) returns (RegisterWorkloadResponse);
}

message RegisterWorkloadRequest {
  string cluster = 1;
  string namespace = 2;
  string workload = 3;
  string workload_type = 4;
  string image_name = 5;
  string image_tag = 6;
  optional Metadata metadata = 7;
}

message Metadata {
  map<string, string> labels = 1;
}

message RegisterWorkloadResponse {}


